@@ -151,7 +151,7 @@ public abstract class APMCMethod extends SimulationMethod
 		double estimate = sampler.getMeanValue();
 		switch (prOp) {
 		case 0: // 0=quantitative
-			return new Double(estimate);
+			return Double.valueOf(estimate);
 		case -1: // -1=lower bound
 			if (estimate >= theta + approximation)
 				return Boolean.valueOf(true);
